2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Document author-specification option, env vars.

	* doc/rcs.texi (Misc common options): Document ‘-wLOGIN’.
	(Environment): Document env vars ‘LOGNAME’, ‘USER’.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use autoconf macro to enable 64-bit file offsets.

	* configure.ac (AC_SYS_LARGEFILE): New macro invocation.

2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Simplify stream/fd sync; avoid ‘fflush’ on input.

	* configure.ac (CAN_FFLUSH_IN): Delete RCS_CBOOL
	and associated var ‘rcs_cv_flush_in_ok’.
	(PRESUMABLY_STANDARD_ENOUGH_BY_NOW): Remove ‘rcs_cv_flush_in_ok’.

2010-10-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘waitpid’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘waitpid’.

2010-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘getcwd’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘getcwd’.

2010-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘mkstemp’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘mkstemp’.

2010-10-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Document env vars that specify dir for temp files.

	* doc/rcs.texi (Environment): Use @defvr;
	document env vars ‘TMPDIR’, ‘TMP’, ‘TEMP’.

2010-10-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Fix bug: Look for and use <siginfo.h>.

	Regression introduced 2010-04-03, "Ignore <siginfo.h>".
	* configure.ac (AC_CHECK_HEADERS_ONCE): Add siginfo.h.

2010-10-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Fix bug: Take empty ‘ac_cv_prog_cc_c99’ as "C99-capable".

	* configure.ac (ac_cv_prog_cc_c99):
	If empty, skip ‘RCS_MUSTHAVE’ check.

2010-10-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Fix bug: Look for and use <ucontext.h>.

	Regression introduced 2010-04-03, "Ignore unused <ucontext.h>".
	* configure.ac (AC_CHECK_HEADERS_ONCE): Add ucontext.h.

2010-10-08  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘findprog’.
